{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 28,
  "lineage": "cc92c48f-2beb-0d23-1b4e-044926a05080",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246302204773:internet-gateway/igw-0c19935e7a5bf7098",
            "id": "igw-0c19935e7a5bf7098",
            "owner_id": "246302204773",
            "tags": {
              "Name": "Terraform-internet-gateway"
            },
            "tags_all": {
              "Name": "Terraform-internet-gateway"
            },
            "vpc_id": "vpc-0fdcf621d84878a00"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-1a-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246302204773:route-table/rtb-0e22cd95ecb62a784",
            "id": "rtb-0e22cd95ecb62a784",
            "owner_id": "246302204773",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-1a-route-table"
            },
            "tags_all": {
              "Name": "private-1a-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdcf621d84878a00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-1a-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246302204773:route-table/rtb-0267d7c5bb6c7895e",
            "id": "rtb-0267d7c5bb6c7895e",
            "owner_id": "246302204773",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c19935e7a5bf7098",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-1b-route-table"
            },
            "tags_all": {
              "Name": "public-1b-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdcf621d84878a00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a-route-table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082483d2754a51cc8",
            "route_table_id": "rtb-0e22cd95ecb62a784",
            "subnet_id": "subnet-0b04eda3c06a5494f"
          },
          "dependencies": [
            "aws_route_table.private-1a-route-table",
            "aws_subnet.private-subnet-1a",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a-route-table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8d6c71c9b9db2bd",
            "route_table_id": "rtb-0267d7c5bb6c7895e",
            "subnet_id": "subnet-020b561aade9998fa"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-1a-route-table",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246302204773:subnet/subnet-0b04eda3c06a5494f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b04eda3c06a5494f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246302204773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1a"
            },
            "tags_all": {
              "Name": "private-subnet-1a"
            },
            "vpc_id": "vpc-0fdcf621d84878a00"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246302204773:subnet/subnet-020b561aade9998fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020b561aade9998fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "246302204773",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-0fdcf621d84878a00"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:246302204773:vpc/vpc-0fdcf621d84878a00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0e26df92774cf74bf",
            "default_route_table_id": "rtb-043028ec3cb52f666",
            "default_security_group_id": "sg-0e7f9fd353fd805a1",
            "dhcp_options_id": "dopt-0453f7e8b4e569bcb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdcf621d84878a00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-043028ec3cb52f666",
            "owner_id": "246302204773",
            "tags": {
              "Name": "Terraform-vpc"
            },
            "tags_all": {
              "Name": "Terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}